# mini-minipic

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  README_extra.md  pyproject.toml  timers.json
.github/workflows/: ci.yaml
doc/: code_structure.md  compilation.md  python_tools.md  timers.md
libminipic/: __main__.py  ci.py  diag.py  run.py  validate.py
scripts/: plot_field.py  plot_particle_binning.py  plot_profiler.py
slurm/: README.md  launch_adastra_mi250.slurm  launch_adastra_mi300.slurm  launch_jean_zay_a100.slurm  launch_jean_zay_h100.slurm  launch_jean_zay_v100.slurm  launch_ruche_a100.slurm  launch_ruche_cpu.slurm  launch_ruche_v100.slurm
src/: main.cpp
src/common/: Backend.hpp  Diagnostics.hpp  Diagnotics.hpp  ElectroMagn.hpp  Field.hpp  Headers.hpp  Params.cpp  Params.hpp  Particles.hpp  Patch.cpp  Patch.hpp  Timers.hpp  Vector.hpp
src/exercices/: Operators.hpp  SubDomain.hpp
src/exercise/: Managers.cpp  Operators.cpp  Operators.hpp  Operators_Sylvain.cpp  Operators_sylvain.cpp  SubDomain.hpp
src/kokkos/: Operators.cpp  Operators.hpp  SubDomain.hpp
src/setups/: antenna.cpp  b_cst.cpp  beam.cpp  e_cst.cpp  thermal.cpp
tests/: launch_ruche_a100.slurm  launch_ruche_cpu.slurm  run.py
